@@ -5385,7 +5385,6 @@ $ #Информация о версиях#
     - версии используемых в проекте сторонних библиотек
     - имена и версии подключённых плагинов
 
-
 @FarConfig
 $ #Редактор конфигурации#
     Запускается из командной строки #far:config#
@@ -5400,16 +5399,16 @@ $ #Редактор конфигурации#
 
     #Enter# или #F4#  изменить значение параметра,
                   boolean и 3-state на месте,
-                  для integer и string вызывается диалог
+                  для integer и string вызывается диалог.
 
     #Shift+F4#      Для типа integer вызывается диалог ввода шестнадцатиричного числа,
-                  всё прочее как для F4
-    #Ctrl+H#        Скрыть/показать параметры, значения которых не изменены (соответствуют значениям по умолчанию)
+                  всё прочее как для #F4#.
+
+    #Ctrl+H#        Скрыть/показать параметры, значения которых не изменены (соответствуют значениям по умолчанию).
 
     #Shift+F1#      Показать описание параметра, если оно доступно.
 
-    #Ctrl+Alt+F#    Включить/Выключить режим фильтрации
-
+    #Ctrl+Alt+F#    Включить/Выключить режим фильтрации.
 
 @Codepages.NoAutoDetectCP
 $ #far:config Codepages.NoAutoDetectCP#
