@@ -3,6 +3,10 @@ This file is a translation of the main russian changelog and is provided by volu
 It might not always be as up to date as the main changelog.
 =======================================================================================
 
+MKadaner 28.01.2018 15:50:33 -0800 - build 5134
+
+1. Translated @FarAbout and @FarConfig help pages to English in FarEng.hlf.m4
+
 zg 27.01.2018 14:55:05 +0200 - build 5134
 
 1. 0003577: Incorrect UNDO functioning after Editor.InsStr.
