@@ -1,3 +1,7 @@
+MKadaner 28.01.2018 15:50:33 -0800 - build 5134
+
+1. Перевёл на английский странички @FarAbout and @FarConfig в FarEng.hlf.m4
+
 zg 27.01.2018 14:55:05 +0200 - build 5134
 
 1. 0003577: Неправильная работа UNDO после Editor.InsStr.
